--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Parametric Table</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./public/style.css" />
   </head>
   <body>
     <!-- In your HTML file, replace the existing <div id="controls">…</div> with this: -->
